[package]
name = "toybank"
version = "0.1.0"
edition = "2021"

[lib]
name = "toybank"
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
rust_decimal = "1.26"
rust_decimal_macros = "1.26"
cucumber = { version = "0.15", features = ["libtest"] }
futures = "0.3"
clap = "4.0.15"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }

[[test]]
name = "test_basic"

[[bin]]
name = "execute"